syntax = "proto3";

package fs.base.userinfo;

import "zskparker.com/foundation/base/pb/base.proto";

service UserInfo {

    rpc Upsert (UpsertRequest) returns (fs.base.Response);

    rpc Get (GetRequest) returns (GetResponse);

}

message UpsertRequest {
    fs.base.Meta meta = 1;
    BaseInfo info = 2;
}

message GetRequest {
    fs.base.Meta meta = 1;
    string userId = 2;
}

message BaseInfo {
    string userId = 1;
    string realName = 2;
    string username = 3;
    int64 sex = 4;
    int64 age = 5;
    string birthday = 6;
    string icon = 7;
}

message GetResponse {
    fs.base.State state = 1;
    BaseInfo info = 2;
}